--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.5+3
+  just_audio: ^0.9.29
+  auto_route:
   flutter_native_splash:
   flutter_launcher_icons:
 flutter_icons:
@@ -60,6 +62,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  auto_route_generator:
   hive_generator:
   build_runner:
 
