--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ version: 1.0.0+1
 environment:
   sdk: '>=2.18.0 <3.0.0'
 
+
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -31,6 +32,10 @@ environment:
 dependencies:
   auto_route: null
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.10.0
+  firebase_core:
+  firebase_messaging:
+  connectivity_plus:
   flutter:
     sdk: flutter
   flutter_svg: ^1.1.5
@@ -40,14 +45,15 @@ dependencies:
   image_picker: ^0.8.5+3
   just_audio: ^0.9.29
   provider:
-#   flutter_native_splash:
+  flutter_native_splash:
+  awesome_notifications:
 #   flutter_launcher_icons:
 # flutter_icons:
 #   android: true
 #   image_path: "assets/turkey.png"
-# flutter_native_splash:
-#   image: assets/turkey.png
-#   color: "#34a8eb"
+flutter_native_splash:
+  image: assets/turkey.png
+  color: "#34a8eb"
 dev_dependencies:
   auto_route_generator: null
   build_runner: null
