--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ version: 1.0.0+1
 environment:
   sdk: '>=2.18.0 <3.0.0'
 
-
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -31,22 +30,29 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   auto_route: null
+  awesome_notifications: null
+  connectivity_plus: null
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
   firebase_auth: ^3.10.0
-  firebase_core:
-  firebase_messaging:
-  connectivity_plus:
+  firebase_core: null
+  firebase_messaging: null
+  fl_chart: ^0.55.2
   flutter:
     sdk: flutter
+  flutter_native_splash: null
+  flutter_screenutil: ^5.5.4
   flutter_svg: ^1.1.5
   hive: null
   hive_flutter: null
   http: null
   image_picker: ^0.8.5+3
+  intl: ^0.17.0
   just_audio: ^0.9.29
-  provider:
-  flutter_native_splash:
-  awesome_notifications:
+  percent_indicator: ^4.2.2
+  provider: null
+  table_calendar: ^3.0.7
+  android_alarm_manager_plus:
 #   flutter_launcher_icons:
 # flutter_icons:
 #   android: true
@@ -81,6 +87,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/figma/
+    - assets/movie_assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -90,11 +98,45 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: ReadexPro
+      fonts:
+        - asset: assets/fonts/ReadexPro-Regular.ttf
+        - asset: assets/fonts/ReadexPro-SemiBold.ttf
+          weight: 600
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Roboto-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Roboto-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Roboto-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Roboto-ThinItalic.ttf
+          weight: 100
+          style: italic
+        - asset: assets/fonts/Roboto-MediumItalic.ttf
+          weight: 400
+          style: italic
+        - asset: assets/fonts/Roboto-LightItalic.ttf
+          weight: 300
+          style: italic
+        - asset: assets/fonts/Roboto-MediumItalic.ttf
+          weight: 500
+          style: italic
+        - asset: assets/fonts/Roboto-BoldItalic.ttf
+          weight: 700
+          style: italic
+        - asset: assets/fonts/Roboto-BlackItalic.ttf
+          weight: 900
+          style: italic
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
